// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`single fields checkbox field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-boolean"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-Checkbox is-enabled root-201"
    >
      <input
        aria-disabled={false}
        autoFocus={false}
        checked={false}
        className="input-202"
        data-ktp-execute-target={true}
        disabled={false}
        id="root"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <label
        className="ms-Checkbox-label label-203"
        htmlFor="root"
      >
        <div
          className="ms-Checkbox-checkbox checkbox-204"
          data-ktp-target={true}
        >
          <i
            aria-hidden={true}
            className="ms-Checkbox-checkmark checkmark-207"
            data-icon-name="CheckMark"
          >
            
          </i>
        </div>
      </label>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__169"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields checkbox field with label 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-boolean"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-Checkbox is-enabled root-201"
    >
      <input
        aria-disabled={false}
        autoFocus={false}
        checked={false}
        className="input-202"
        data-ktp-execute-target={true}
        disabled={false}
        id="root"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <label
        className="ms-Checkbox-label label-203"
        htmlFor="root"
      >
        <div
          className="ms-Checkbox-checkbox checkbox-204"
          data-ktp-target={true}
        >
          <i
            aria-hidden={true}
            className="ms-Checkbox-checkmark checkmark-207"
            data-icon-name="CheckMark"
          >
            
          </i>
        </div>
        <span
          className="ms-Checkbox-text text-206"
        >
          test
        </span>
      </label>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__172"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields checkboxes field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-130"
    />
    <div
      className="ms-Checkbox is-enabled root-201"
    >
      <input
        aria-disabled={false}
        autoFocus={false}
        checked={false}
        className="input-202"
        data-ktp-execute-target={true}
        disabled={false}
        id="root-0"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <label
        className="ms-Checkbox-label label-203"
        htmlFor="root-0"
      >
        <div
          className="ms-Checkbox-checkbox checkbox-204"
          data-ktp-target={true}
        >
          <i
            aria-hidden={true}
            className="ms-Checkbox-checkmark checkmark-207"
            data-icon-name="CheckMark"
          >
            
          </i>
        </div>
        <span
          className="ms-Checkbox-text text-206"
        >
          foo
        </span>
      </label>
    </div>
    <div
      className="ms-Checkbox is-enabled root-201"
    >
      <input
        aria-disabled={false}
        autoFocus={false}
        checked={false}
        className="input-202"
        data-ktp-execute-target={true}
        disabled={false}
        id="root-1"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <label
        className="ms-Checkbox-label label-203"
        htmlFor="root-1"
      >
        <div
          className="ms-Checkbox-checkbox checkbox-204"
          data-ktp-target={true}
        >
          <i
            aria-hidden={true}
            className="ms-Checkbox-checkmark checkmark-207"
            data-icon-name="CheckMark"
          >
            
          </i>
        </div>
        <span
          className="ms-Checkbox-text text-206"
        >
          bar
        </span>
      </label>
    </div>
    <div
      className="ms-Checkbox is-enabled root-201"
    >
      <input
        aria-disabled={false}
        autoFocus={false}
        checked={false}
        className="input-202"
        data-ktp-execute-target={true}
        disabled={false}
        id="root-2"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <label
        className="ms-Checkbox-label label-203"
        htmlFor="root-2"
      >
        <div
          className="ms-Checkbox-checkbox checkbox-204"
          data-ktp-target={true}
        >
          <i
            aria-hidden={true}
            className="ms-Checkbox-checkmark checkmark-207"
            data-icon-name="CheckMark"
          >
            
          </i>
        </div>
        <span
          className="ms-Checkbox-text text-206"
        >
          fuzz
        </span>
      </label>
    </div>
    <div
      className="ms-Checkbox is-enabled root-201"
    >
      <input
        aria-disabled={false}
        autoFocus={false}
        checked={false}
        className="input-202"
        data-ktp-execute-target={true}
        disabled={false}
        id="root-3"
        name="root"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="checkbox"
      />
      <label
        className="ms-Checkbox-label label-203"
        htmlFor="root-3"
      >
        <div
          className="ms-Checkbox-checkbox checkbox-204"
          data-ktp-target={true}
        >
          <i
            aria-hidden={true}
            className="ms-Checkbox-checkmark checkmark-207"
            data-icon-name="CheckMark"
          >
            
          </i>
        </div>
        <span
          className="ms-Checkbox-text text-206"
        >
          qux
        </span>
      </label>
    </div>
    <span
      style={
        Object {
          "color": "rgb(164, 38, 44)",
          "fontFamily": "\\"Segoe UI\\", \\"Segoe UI Web (West European)\\", \\"Segoe UI\\", -apple-system, BlinkMacSystemFont, Roboto, \\"Helvetica Neue\\", sans-serif",
          "fontSize": 12,
          "fontWeight": "normal",
        }
      }
    >
      
    </span>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__175"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields field with description 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-111"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-130"
                htmlFor="root_my-field"
                id="TextFieldLabel191"
              >
                my-field
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-112"
              >
                <input
                  aria-describedby="root_my-field__error root_my-field__description root_my-field__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel191"
                  autoFocus={false}
                  className="ms-TextField-field field-113"
                  disabled={false}
                  id="root_my-field"
                  name="root_my-field"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <span
            className="css-229"
          >
            <span
              className="css-229"
              id="root_my-field__description"
            >
              some description
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__194"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields field with description in uiSchema 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-111"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-130"
                htmlFor="root_my-field"
                id="TextFieldLabel199"
              >
                my-field
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-112"
              >
                <input
                  aria-describedby="root_my-field__error root_my-field__description root_my-field__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel199"
                  autoFocus={false}
                  className="ms-TextField-field field-113"
                  disabled={false}
                  id="root_my-field"
                  name="root_my-field"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <span
            className="css-229"
          >
            <span
              className="css-229"
              id="root_my-field__description"
            >
              some other description
            </span>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__202"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields format color 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-130"
      htmlFor="root"
    />
    <div
      aria-label="Color picker, Red 255 Green 255 Blue 255 Alpha 100% selected."
      className="ms-ColorPicker root-131"
      role="group"
    >
      <div
        className="ms-ColorPicker-panel panel-132"
      >
        <div
          aria-describedby="ColorRectangle-description62"
          aria-label="Saturation and brightness"
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          aria-valuetext="Saturation 0 brightness 100"
          className="ms-ColorPicker-colorRect root-141"
          data-is-focusable={true}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          role="slider"
          style={
            Object {
              "backgroundColor": "#ff0000",
            }
          }
          tabIndex={0}
        >
          <div
            className="description-145"
            id="ColorRectangle-description62"
          >
            Use left and right arrow keys to set saturation. Use up and down arrow keys to set brightness.
          </div>
          <div
            className="ms-ColorPicker-light light-142"
          />
          <div
            className="ms-ColorPicker-dark dark-143"
          />
          <div
            className="ms-ColorPicker-thumb thumb-144"
            style={
              Object {
                "backgroundColor": "#ffffff",
                "left": "0%",
                "top": "0%",
              }
            }
          />
        </div>
        <div
          className="flexContainer-137"
        >
          <div
            className="flexSlider-138"
          >
            <div
              aria-label="Hue"
              aria-valuemax={359}
              aria-valuemin={0}
              aria-valuenow={0}
              aria-valuetext="0"
              className="ms-ColorPicker-slider is-hue root-146"
              data-is-focusable={true}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              role="slider"
              tabIndex={0}
            >
              <div
                className="ms-ColorPicker-thumb is-slider sliderThumb-148"
                style={
                  Object {
                    "left": "0%",
                  }
                }
              />
            </div>
            <div
              aria-label="Alpha"
              aria-valuemax={100}
              aria-valuemin={0}
              aria-valuenow={100}
              aria-valuetext="100"
              className="ms-ColorPicker-slider is-alpha root-149"
              data-is-focusable={true}
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              role="slider"
              tabIndex={0}
            >
              <div
                className="ms-ColorPicker-sliderOverlay sliderOverlay-147"
                style={
                  Object {
                    "background": "linear-gradient(to right, transparent, #ffffff)",
                  }
                }
              />
              <div
                className="ms-ColorPicker-thumb is-slider sliderThumb-148"
                style={
                  Object {
                    "left": "100%",
                  }
                }
              />
            </div>
          </div>
          <div
            className="flexPreviewBox-139"
          >
            <div
              className="ms-ColorPicker-colorSquare colorSquare-136 is-preview"
              style={
                Object {
                  "backgroundColor": "#ffffff",
                }
              }
            />
          </div>
        </div>
        <table
          cellPadding="0"
          cellSpacing="0"
          className="ms-ColorPicker-table table-133"
          role="group"
        >
          <thead>
            <tr
              className="tableHeader-134"
            >
              <td
                className="tableHexCell-135"
              >
                Hex
              </td>
              <td>
                Red
              </td>
              <td>
                Green
              </td>
              <td>
                Blue
              </td>
              <td
                className=""
              >
                Alpha
              </td>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                <div
                  className="ms-TooltipHost root-150"
                  onBlurCapture={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="none"
                >
                  <div
                    className="ms-TextField ms-ColorPicker-input input-151"
                  >
                    <div
                      className="ms-TextField-wrapper"
                    >
                      <div
                        className="ms-TextField-fieldGroup fieldGroup-112"
                      >
                        <input
                          aria-invalid={false}
                          aria-label="Hex"
                          autoComplete="off"
                          className="ms-TextField-field field-113"
                          id="TextField64"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onInput={[Function]}
                          spellCheck={false}
                          type="text"
                          value="ffffff"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    hidden={true}
                    id="tooltip63"
                    style={
                      Object {
                        "border": 0,
                        "height": 1,
                        "margin": -1,
                        "overflow": "hidden",
                        "padding": 0,
                        "position": "absolute",
                        "whiteSpace": "nowrap",
                        "width": 1,
                      }
                    }
                  />
                </div>
              </td>
              <td>
                <div
                  className="ms-TooltipHost root-150"
                  onBlurCapture={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="none"
                >
                  <div
                    className="ms-TextField ms-ColorPicker-input input-151"
                  >
                    <div
                      className="ms-TextField-wrapper"
                    >
                      <div
                        className="ms-TextField-fieldGroup fieldGroup-112"
                      >
                        <input
                          aria-invalid={false}
                          aria-label="Red"
                          autoComplete="off"
                          className="ms-TextField-field field-113"
                          id="TextField70"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onInput={[Function]}
                          spellCheck={false}
                          type="text"
                          value="255"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    hidden={true}
                    id="tooltip69"
                    style={
                      Object {
                        "border": 0,
                        "height": 1,
                        "margin": -1,
                        "overflow": "hidden",
                        "padding": 0,
                        "position": "absolute",
                        "whiteSpace": "nowrap",
                        "width": 1,
                      }
                    }
                  />
                </div>
              </td>
              <td>
                <div
                  className="ms-TooltipHost root-150"
                  onBlurCapture={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="none"
                >
                  <div
                    className="ms-TextField ms-ColorPicker-input input-151"
                  >
                    <div
                      className="ms-TextField-wrapper"
                    >
                      <div
                        className="ms-TextField-fieldGroup fieldGroup-112"
                      >
                        <input
                          aria-invalid={false}
                          aria-label="Green"
                          autoComplete="off"
                          className="ms-TextField-field field-113"
                          id="TextField76"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onInput={[Function]}
                          spellCheck={false}
                          type="text"
                          value="255"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    hidden={true}
                    id="tooltip75"
                    style={
                      Object {
                        "border": 0,
                        "height": 1,
                        "margin": -1,
                        "overflow": "hidden",
                        "padding": 0,
                        "position": "absolute",
                        "whiteSpace": "nowrap",
                        "width": 1,
                      }
                    }
                  />
                </div>
              </td>
              <td>
                <div
                  className="ms-TooltipHost root-150"
                  onBlurCapture={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="none"
                >
                  <div
                    className="ms-TextField ms-ColorPicker-input input-151"
                  >
                    <div
                      className="ms-TextField-wrapper"
                    >
                      <div
                        className="ms-TextField-fieldGroup fieldGroup-112"
                      >
                        <input
                          aria-invalid={false}
                          aria-label="Blue"
                          autoComplete="off"
                          className="ms-TextField-field field-113"
                          id="TextField82"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onInput={[Function]}
                          spellCheck={false}
                          type="text"
                          value="255"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    hidden={true}
                    id="tooltip81"
                    style={
                      Object {
                        "border": 0,
                        "height": 1,
                        "margin": -1,
                        "overflow": "hidden",
                        "padding": 0,
                        "position": "absolute",
                        "whiteSpace": "nowrap",
                        "width": 1,
                      }
                    }
                  />
                </div>
              </td>
              <td>
                <div
                  className="ms-TooltipHost root-150"
                  onBlurCapture={[Function]}
                  onFocusCapture={[Function]}
                  onKeyDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  role="none"
                >
                  <div
                    className="ms-TextField ms-ColorPicker-input input-151"
                  >
                    <div
                      className="ms-TextField-wrapper"
                    >
                      <div
                        className="ms-TextField-fieldGroup fieldGroup-112"
                      >
                        <input
                          aria-invalid={false}
                          aria-label="Alpha"
                          autoComplete="off"
                          className="ms-TextField-field field-113"
                          id="TextField88"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onInput={[Function]}
                          spellCheck={false}
                          type="text"
                          value="100"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    hidden={true}
                    id="tooltip87"
                    style={
                      Object {
                        "border": 0,
                        "height": 1,
                        "margin": -1,
                        "overflow": "hidden",
                        "padding": 0,
                        "position": "absolute",
                        "whiteSpace": "nowrap",
                        "width": 1,
                      }
                    }
                  />
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__93"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields format date 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      aria-describedby="root__error root__description root__help"
      className="ms-DatePicker control-152"
      id="root"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div>
        <div
          className="ms-TextField textField-158"
        >
          <div
            className="ms-TextField-wrapper"
          >
            <div
              className="ms-TextField-fieldGroup fieldGroup-112"
            >
              <div
                aria-describedby="TextFieldDescription98"
                aria-expanded={false}
                aria-haspopup="dialog"
                aria-invalid={false}
                aria-label="Select a date"
                className="ms-TextField-field field-159 readOnlyTextField-156"
                data-is-focusable={true}
                id="root-label"
                onBlur={[Function]}
                onChange={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                onKeyDown={[Function]}
                role="combobox"
                tabIndex={0}
              >
                <span
                  className="readOnlyPlaceholder-157"
                >
                  
                </span>
              </div>
              <i
                aria-hidden={true}
                className="ms-DatePicker-event--without-label msDatePickerDisabled icon-163"
                data-icon-name="Calendar"
                onClick={[Function]}
              >
                
              </i>
            </div>
          </div>
          <span
            id="TextFieldDescription98"
          >
            <div
              aria-live="assertive"
              className="statusMessage-155"
            />
            
          </span>
        </div>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__102"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields format datetime 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-111"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-112"
        >
          <input
            aria-describedby="root__error root__description root__help"
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-113"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder=""
            readOnly={false}
            type="datetime-local"
            value=""
          />
        </div>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__110"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields format time 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-111"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-112"
        >
          <input
            aria-describedby="root__error root__description root__help"
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-113"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder=""
            readOnly={false}
            type="time"
            value=""
          />
        </div>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__118"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields help and error display 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-MessageBar ms-MessageBar--error ms-MessageBar-singleline root-231"
  >
    <div
      className="ms-MessageBar-content content-232"
    >
      <div
        aria-hidden={true}
        className="ms-MessageBar-icon iconContainer-233"
      >
        <i
          aria-hidden={true}
          className="icon-241"
          data-icon-name="ErrorBadge"
        >
          
        </i>
      </div>
      <div
        aria-live="assertive"
        className="ms-MessageBar-text text-235"
        id="MessageBar237"
        role="alert"
      >
        <span
          className="ms-MessageBar-innerText innerText-236"
        />
      </div>
    </div>
  </div>
  <div
    className="ms-Grid-col ms-sm12  field field-string field-error has-error has-danger"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-111"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-242"
        >
          <input
            aria-describedby="TextFieldDescription239"
            aria-invalid={true}
            autoFocus={false}
            className="ms-TextField-field field-113"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder=""
            readOnly={false}
            type="text"
            value=""
          />
        </div>
      </div>
      <span
        id="TextFieldDescription239"
      >
        <div
          role="alert"
        />
      </span>
    </div>
    
    <div
      className="ms-List"
      id="root__error"
      role="list"
    >
      <div
        className="ms-List-surface"
        role="presentation"
      >
        <div
          className="ms-List-page"
          role="presentation"
          style={Object {}}
        >
          <div
            className="ms-List-cell"
            data-automationid="ListCell"
            data-list-index={0}
            role="listitem"
          >
            
          </div>
        </div>
      </div>
    </div>
    <span
      className="css-229"
      id="root__help"
    >
      help me!
    </span>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__243"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields hidden field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          style={
            Object {
              "display": "none",
            }
          }
        >
          <input
            id="root_my-field"
            name="root_my-field"
            type="hidden"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__186"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields hidden label 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-111"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-112"
        >
          <input
            aria-describedby="root__error root__description root__help"
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-113"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder=""
            readOnly={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__218"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields null field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-null"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__56"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields number field 0 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-number"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-111"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-112"
        >
          <input
            aria-describedby="root__error root__description root__help"
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-113"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder=""
            readOnly={false}
            step="any"
            type="number"
            value="0"
          />
        </div>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__53"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields number field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-number"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-111"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-112"
        >
          <input
            aria-describedby="root__error root__description root__help"
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-113"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder=""
            readOnly={false}
            step="any"
            type="number"
            value=""
          />
        </div>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__45"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields password field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-111"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-112"
        >
          <input
            aria-describedby="root__error root__description root__help"
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-113"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder=""
            readOnly={false}
            type="password"
            value=""
          />
        </div>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__126"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields radio field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-boolean"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-ChoiceFieldGroup root-208"
      id="root"
      name="root"
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onFocus={[Function]}
        role="radiogroup"
      >
        <div
          className="ms-ChoiceFieldGroup-flexContainer"
        >
          <div
            className="ms-ChoiceField root-209"
          >
            <div
              className="ms-ChoiceField-wrapper"
            >
              <input
                aria-describedby="root__error root__description root__help"
                checked={false}
                className="ms-ChoiceField-input input-210"
                disabled={false}
                id="ChoiceGroup178-0"
                name="root"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
              />
              <label
                className="ms-ChoiceField-field field-211"
                htmlFor="ChoiceGroup178-0"
              >
                <span
                  className="ms-ChoiceFieldLabel"
                  id="ChoiceGroupLabel179-0"
                >
                  Yes
                </span>
              </label>
            </div>
          </div>
          <div
            className="ms-ChoiceField root-209"
          >
            <div
              className="ms-ChoiceField-wrapper"
            >
              <input
                aria-describedby="root__error root__description root__help"
                checked={false}
                className="ms-ChoiceField-input input-210"
                disabled={false}
                id="ChoiceGroup178-1"
                name="root"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="radio"
              />
              <label
                className="ms-ChoiceField-field field-211"
                htmlFor="ChoiceGroup178-1"
              >
                <span
                  className="ms-ChoiceFieldLabel"
                  id="ChoiceGroupLabel179-1"
                >
                  No
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__180"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields schema examples 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-111"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-112"
        >
          <input
            aria-describedby="root__error root__description root__help root__examples"
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-113"
            disabled={false}
            id="root"
            list="root__examples"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder=""
            readOnly={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <datalist
      id="root__examples"
    >
      <option
        value="Firefox"
      />
      <option
        value="Chrome"
      />
      <option
        value="Opera"
      />
      <option
        value="Vivaldi"
      />
      <option
        value="Safari"
      />
    </datalist>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__234"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields select field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-Dropdown-container"
    >
      <div
        aria-describedby="root__error root__description root__help"
        aria-disabled={false}
        aria-expanded="false"
        aria-haspopup="listbox"
        className="ms-Dropdown dropdown-181"
        data-is-focusable={true}
        data-ktp-target={true}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        role="combobox"
        tabIndex={0}
      >
        <span
          aria-invalid={false}
          className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-182"
          id="root-option"
        />
        <span
          className="ms-Dropdown-caretDownWrapper caretDownWrapper-183"
        >
          <i
            aria-hidden={true}
            className="ms-Dropdown-caretDown caretDown-199"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__148"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields select field multiple choice 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-Dropdown-container"
    >
      <div
        aria-describedby="root__error root__description root__help"
        aria-disabled={false}
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-required={false}
        className="ms-Dropdown dropdown-181"
        data-is-focusable={true}
        data-ktp-target={true}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        role="combobox"
        tabIndex={0}
      >
        <span
          aria-invalid={false}
          className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-182"
          id="root-option"
        />
        <span
          className="ms-Dropdown-caretDownWrapper caretDownWrapper-183"
        >
          <i
            aria-hidden={true}
            className="ms-Dropdown-caretDown caretDown-199"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__151"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields select field multiple choice enumDisabled 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-Dropdown-container"
    >
      <div
        aria-describedby="root__error root__description root__help"
        aria-disabled={false}
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-required={false}
        className="ms-Dropdown dropdown-181"
        data-is-focusable={true}
        data-ktp-target={true}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        role="combobox"
        tabIndex={0}
      >
        <span
          aria-invalid={false}
          className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-182"
          id="root-option"
        />
        <span
          className="ms-Dropdown-caretDownWrapper caretDownWrapper-183"
        >
          <i
            aria-hidden={true}
            className="ms-Dropdown-caretDown caretDown-199"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__160"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields select field multiple choice formData 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-Dropdown-container"
    >
      <div
        aria-describedby="root__error root__description root__help"
        aria-disabled={false}
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-required={false}
        className="ms-Dropdown dropdown-181"
        data-is-focusable={true}
        data-ktp-target={true}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        role="combobox"
        tabIndex={0}
      >
        <span
          aria-invalid={false}
          className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-182"
          id="root-option"
        />
        <span
          className="ms-Dropdown-caretDownWrapper caretDownWrapper-183"
        >
          <i
            aria-hidden={true}
            className="ms-Dropdown-caretDown caretDown-199"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__166"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields select field multiple choice with labels 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-array"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-Dropdown-container"
    >
      <div
        aria-describedby="root__error root__description root__help"
        aria-disabled={false}
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-required={false}
        className="ms-Dropdown dropdown-181"
        data-is-focusable={true}
        data-ktp-target={true}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        role="combobox"
        tabIndex={0}
      >
        <span
          aria-invalid={false}
          className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-182"
          id="root-option"
        />
        <span
          className="ms-Dropdown-caretDownWrapper caretDownWrapper-183"
        >
          <i
            aria-hidden={true}
            className="ms-Dropdown-caretDown caretDown-199"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__154"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields select field single choice enumDisabled 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-Dropdown-container"
    >
      <div
        aria-describedby="root__error root__description root__help"
        aria-disabled={false}
        aria-expanded="false"
        aria-haspopup="listbox"
        className="ms-Dropdown dropdown-181"
        data-is-focusable={true}
        data-ktp-target={true}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        role="combobox"
        tabIndex={0}
      >
        <span
          aria-invalid={false}
          className="ms-Dropdown-title ms-Dropdown-titleIsPlaceHolder title-182"
          id="root-option"
        />
        <span
          className="ms-Dropdown-caretDownWrapper caretDownWrapper-183"
        >
          <i
            aria-hidden={true}
            className="ms-Dropdown-caretDown caretDown-199"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__157"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields select field single choice formData 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-Dropdown-container"
    >
      <div
        aria-describedby="root__error root__description root__help"
        aria-disabled={false}
        aria-expanded="false"
        aria-haspopup="listbox"
        className="ms-Dropdown dropdown-181"
        data-is-focusable={true}
        data-ktp-target={true}
        id="root"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        role="combobox"
        tabIndex={0}
      >
        <span
          aria-invalid={false}
          className="ms-Dropdown-title title-200"
          id="root-option"
        >
          bar
        </span>
        <span
          className="ms-Dropdown-caretDownWrapper caretDownWrapper-183"
        >
          <i
            aria-hidden={true}
            className="ms-Dropdown-caretDown caretDown-199"
            data-icon-name="ChevronDown"
          >
            
          </i>
        </span>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__163"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields slider field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-integer"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-130"
      htmlFor="root"
    />
    <div
      className="ms-Slider ms-Slider-enabled ms-Slider-row root-216"
    >
      <label
        className="ms-Label titleLabel-227"
        htmlFor="root"
      />
      <div
        className="ms-Slider-container container-218"
      >
        <div
          aria-disabled={false}
          aria-valuemax={100}
          aria-valuemin={42}
          aria-valuenow={42}
          aria-valuetext="42"
          className="ms-Slider-slideBox ms-Slider-showValue slideBox-219"
          data-is-focusable={true}
          id="root"
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          role="slider"
          tabIndex={0}
        >
          <div
            className="ms-Slider-line line-221"
          >
            <span
              className="ms-Slider-thumb thumb-220"
              style={
                Object {
                  "left": "0%",
                }
              }
            />
            <span
              className="lineContainer-222 ms-Slider-inactive inactiveSection-224"
              style={
                Object {
                  "width": "0%",
                }
              }
            />
            <span
              className="lineContainer-222 ms-Slider-active activeSection-223"
              style={
                Object {
                  "width": "0%",
                }
              }
            />
            <span
              className="lineContainer-222 ms-Slider-inactive inactiveSection-224"
              style={
                Object {
                  "width": "100%",
                }
              }
            />
          </div>
        </div>
        <label
          className="ms-Label ms-Slider-value valueLabel-228"
        >
          42
        </label>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__183"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields string field format data-url 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div>
      <div
        className="ms-TextField root-111"
      >
        <div
          className="ms-TextField-wrapper"
        >
          <div
            className="ms-TextField-fieldGroup fieldGroup-112"
          >
            <input
              aria-describedby="root__error root__description root__help"
              aria-invalid={false}
              autoFocus={false}
              className="ms-TextField-field field-113"
              disabled={false}
              id="root"
              name="root"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              placeholder=""
              readOnly={false}
              type="file"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__29"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields string field format email 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-111"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-112"
        >
          <input
            aria-describedby="root__error root__description root__help"
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-113"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder=""
            readOnly={false}
            type="email"
            value=""
          />
        </div>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__13"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields string field format uri 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-111"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-112"
        >
          <input
            aria-describedby="root__error root__description root__help"
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-113"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder=""
            readOnly={false}
            type="url"
            value=""
          />
        </div>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__21"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields string field regular 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-111"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-112"
        >
          <input
            aria-describedby="root__error root__description root__help"
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-113"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder=""
            readOnly={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__5"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields string field with placeholder 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-111"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-112"
        >
          <input
            aria-describedby="root__error root__description root__help"
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-113"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="placeholder"
            readOnly={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__37"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields textarea field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField ms-TextField--multiline root-111"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-178"
        >
          <textarea
            aria-describedby="root__error root__description root__help"
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-179"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder=""
            readOnly={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__145"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields title field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-object"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-230"
      id="root__title"
    >
      Titre 1
    </label>
    <div
      className="ms-Grid"
      dir="ltr"
    >
      <div
        className="ms-Grid-row"
      >
        <div
          className="ms-Grid-col ms-sm12  field field-string"
          style={
            Object {
              "marginBottom": 15,
            }
          }
        >
          <div
            className="ms-TextField root-111"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <label
                className="ms-Label root-130"
                htmlFor="root_title"
                id="TextFieldLabel207"
              >
                Titre 2
              </label>
              <div
                className="ms-TextField-fieldGroup fieldGroup-112"
              >
                <input
                  aria-describedby="root_title__error root_title__description root_title__help"
                  aria-invalid={false}
                  aria-labelledby="TextFieldLabel207"
                  autoFocus={false}
                  className="ms-TextField-field field-113"
                  disabled={false}
                  id="root_title"
                  name="root_title"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder=""
                  readOnly={false}
                  required={false}
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          
        </div>
      </div>
    </div>
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__210"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields unsupported field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-undefined"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="unsupported-field"
    >
      <p>
        <span>
          Unsupported field schema for field 
          <code>
            root
          </code>
          : 
          <em>
            Unknown field type undefined
          </em>
          .
        </span>
      </p>
      <pre>
        {}
      </pre>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__59"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields up/down field 1`] = `
<form
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-number"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <label
      className="ms-Label root-130"
      htmlFor="root"
    />
    <div
      className="root-164"
    >
      
      <div
        aria-describedby="root__error root__description root__help"
        className="spinButtonWrapper-168"
        data-ktp-target={true}
        id="root"
      >
        <input
          aria-disabled={false}
          aria-labelledby=""
          aria-valuemax={Infinity}
          aria-valuemin={-Infinity}
          aria-valuetext=""
          autoComplete="off"
          className="ms-spinButton-input input-169"
          data-ktp-execute-target={true}
          data-lpignore={true}
          disabled={false}
          id="input129"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          role="spinbutton"
          type="text"
          value=""
        />
        <span
          className="arrowButtonsContainer-170"
        >
          <button
            aria-label="Increase value by 1"
            className="ms-Button ms-Button--icon ms-UpButton root-171"
            data-is-focusable={false}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            tabIndex={-1}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-123"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-105 css-175 ms-Button-icon icon-172"
                data-icon-name="ChevronUpSmall"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-2\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
          <button
            aria-label="Decrease value by 1"
            className="ms-Button ms-Button--icon ms-DownButton root-171"
            data-is-focusable={false}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            tabIndex={-1}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-123"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-105 css-177 ms-Button-icon icon-172"
                data-icon-name="ChevronDownSmall"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons-3\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
        </span>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__137"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</form>
`;

exports[`single fields using custom tagName 1`] = `
<div
  className="rjsf"
  noValidate={false}
  onSubmit={[Function]}
>
  <div
    className="ms-Grid-col ms-sm12  field field-string"
    style={
      Object {
        "marginBottom": 15,
      }
    }
  >
    <div
      className="ms-TextField root-111"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-112"
        >
          <input
            aria-describedby="root__error root__description root__help"
            aria-invalid={false}
            autoFocus={false}
            className="ms-TextField-field field-113"
            disabled={false}
            id="root"
            name="root"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder=""
            readOnly={false}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    
  </div>
  <div>
    <br />
    <div
      className="ms-Grid-col ms-sm12"
    >
      <button
        className="ms-Button ms-Button--primary root-122"
        data-is-focusable={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="submit"
      >
        <span
          className="ms-Button-flexContainer flexContainer-123"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Button-textContainer textContainer-124"
          >
            <span
              className="ms-Button-label label-126"
              id="id__226"
            >
              Submit
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;
